--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,19 @@
+body{
+	background: yellow url(../img/desert.png) repeat 0 0;
+}
 canvas {
-	width: 800px;
-	height: 600px;
-	border: 1px solid black;
+	width: 100%;
+	height: 90%;
+	border: 1px solid rgba(0,0,0, 0.25);
+	background-color: rgba(255,255,255,0.75);
+}
+
+h5{
+	color: white;
+	text-shadow: 1px 1px 2px black, 0 0 1em black;
+}
+
+#snake-words,
+#snake-info{
+	display: none;
 }
