--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,20 @@
 body{
 	background: yellow url(../img/desert.png) repeat 0 0;
+	width: 100%;
+	height: 100%;
 }
 canvas {
-
+	border-radius: 25px;
 	background-color: rgba(255,255,255,0.75);
+	margin: 10px;
+	display: block;
+}
+
+.controls{
+	position: absolute;
+	right: 10px;
+	top: 35px;
+	opacity: 0.9;
 }
 
 h5{
