--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,20 @@ body{
 	background: yellow url(../img/desert.png) repeat 0 0;
 	width: 100%;
 	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 canvas {
 	border-radius: 25px;
 	background-color: rgba(255,255,255,0.75);
-	margin: 10px;
 	display: block;
+}
+
+#status{
+	position: absolute;
+	right: 15px;
+	top: 35px;
+	opacity: 0.9;
 }
 
 #controls{
@@ -15,6 +23,7 @@ canvas {
 	right: 10px;
 	top: 35px;
 	opacity: 0.9;
+	display: none;
 }
 
 h5{
