--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,97 @@
 body{
-	background: yellow url(../img/desert.png) repeat 0 0;
+	background: #ddc084 url(../img/desert.png) repeat 0 0;
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 canvas {
 	border-radius: 25px;
 	background-color: rgba(255,255,255,0.75);
-	display: block;
+}
+
+#statistics{
+	background-color: rgba(0,0,0,0.5);
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 10px 10px;
+	border-radius: 0 25px 0px 25px;
+	font-weight: bold;
+	font-family: monospace;
+	font-size: larger;
+	color: white;
+	height: 16px;
+	width: 320px;
+}
+
+#snake-letters{
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	left: 10px;
+	
+	padding: 10px 10px;
+	/*background-color: rgba(0,0,0,0.25);*/
+	/*border-radius: 0 0 0 25px;*/
+}
+
+.badge{
+	-moz-border-radius: 9px;
+	-webkit-border-radius: 9px;
+	background-color: #3A87AD;
+	border-radius: 9px;
+	color: white;
+	display: inline-block;
+	font-size: 11.844px;
+	font-weight: bold;
+	line-height: 14px;
+	padding: 2px 9px;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	vertical-align: baseline;
+	white-space: nowrap;
+}
+
+
+/*
+#startup{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+
+	max-width: 800px;
+	margin: 0 auto;
+	background: #ddc084 url(../img/desert.png) repeat 0 0;
+	border: 10px solid rgba(222, 192, 132, 0.3);
+	border-radius: 16px;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+	height: 256px;
+}
+
+#startup h1{
+	color: white;
+	text-shadow:2px 2px 10px #000000;
+	text-align: center;
+	width: 100%;
+	font-size: 300%;
+	margin: 16px 0;
+}
+
+#startup div{
+	float: left;
+	margin: 0 10px;
+	height: 100px;
+}
+
+#startup img{
+	height: 90px;
+    -webkit-transition-property: height;
+    -webkit-transition-duration: 0.5s;
+    -webkit-transition-timing-function: ease;
+
+}
+
+#startup img:hover{
+	height: 100px;
 }
 
 #status{
@@ -16,22 +99,4 @@ canvas {
 	right: 15px;
 	top: 35px;
 	opacity: 0.9;
-}
-
-#controls{
-	position: absolute;
-	right: 10px;
-	top: 35px;
-	opacity: 0.9;
-	display: none;
-}
-
-h5{
-	color: white;
-	text-shadow: 1px 1px 2px black, 0 0 1em black;
-}
-
-#snake-words,
-#snake-info{
-	display: none;
-}
+}*/
